# HyDAMOValidatieModule

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
changelog/: index.html
code-snippets/: create_profiellijn_gpkg.py
docs/: changelog.md  index.md
docs/guides/: contribute.md  get_started.md  release.md
docs/reference/: datasets.md  general_functions.md  hydamo.md  logic_functions.md  topologic_functions.md
envs/: dev_environment.yml  dev_environment_spyder.yml  environment.yml
guides/contribute/: index.html
guides/get_started/: index.html
guides/release/: index.html
hydamo_validation/: __init__.py  __main__.py  datamodel.py  datasets.py  geometry.py  logical_validation.py  summaries.py  syntax_validation.py  utils.py  validator.py
hydamo_validation/functions/: custom.py  general.py  logic.py  topologic.py
notebooks/: test_dommelerwaard.ipynb  test_profielen.ipynb  test_sturing.ipynb  test_wrij.ipynb
search/: search_index.json
tests/: config.py  datasets_test.py  debug_hyv200.py  debug_template.py  dommelerwaard_test.py  general_functions_test.py  hydamo_2_2_test.py  init_test.py  summaries_test.py  test_datasets.py  test_dommelerwaard.py  test_general_functions.py  test_hydamo_2_2.py  test_hydamo_2_4.py  test_hydamo_2_5.py  test_init.py  test_logic_functions.py  test_not_overlapping.py  test_productie.py  test_structures_at_interersections.py  test_summaries.py  test_testset.py  test_topologic_functions.py  test_validationrules.py  test_wrij.py  test_wrij_profielen.py  topologic_functions_test.py  wrij_profielen.py  wrij_sturing.py  wrij_test.py
(+53 files in other folders)
