[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydamo_validation"
description = "Validation module for HyDAMO data"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    { name = "het Waterschapshuis", email = "hydamo-validatietool@hetwaterschapshuis.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.12,<3.13" # numpy/pandas/geo-stack in maart 2026 alleen stabiel met 3.12, later openzetten
dependencies = [
    "geopandas", 
    "pandas>=2",
    "pyogrio",
    "rasterio",
    "shapely>=2",
    "rasterstats",
    "tqdm",
    "jsonschema<4.23" # openzetten bij upgrade naar Python 3.13+, te nieuwe versie gaan mis tijdens deployment

]

dynamic = ["version"]

[project.optional-dependencies]
# onderstaande zijn nodig voor de ontwikkelomgeving
dev = [
    "pytest",
    "pytest-cov",
	"ipykernel",
    "setuptools",
    "twine"
]

# onderstaande zijn nodig voor de dockeromgeving en bevatten modules voor de helper applicatie src/run.py
docker = [
    "pydantic",
    "firebase_admin",
    "hydamo-validation==1.5.0b1"
]

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "hydamo_validation.__version__" }

[tool.setuptools.packages.find]
include = ["hydamo_validation", "hydamo_validation.*"]

[tool.setuptools.package-data]
hydamo_validation = ["schemas/hydamo/*.json","schemas/rules/*.json", "styles/*.*"]

[project.urls]
Source = "https://github.com/HetWaterschapshuis/HyDAMOValidatieModule"
